# ecommerce-store-ops

./: .gitignore  CLAUDE.md  README.md  买家秀图片生成提示词.md  天猫运营提示词.md  运营店铺索引.md
Ops-Cli/: .env.example  .gitignore  README.md  pyproject.toml
Ops-Cli/data/jst/: pickup_watch_config.json
Ops-Cli/docs/: architecture.md  browser_9222_debug.md  double_browser_learning.md  ops_cli_contract.md  platform_capabilities.md
Ops-Cli/scripts/: print_daily_profit_message.py  send_daily_profit_weixin.py  send_monthly_profit_feishu.py
Ops-Cli/sessionhub/: .gitignore  Codex_Chrome_SessionHub_任务提示词模板.md  README.md  __init__.py  api.py  config.yaml  requirements.txt  sessionhub.py
Ops-Cli/sessionhub/browser/: __init__.py  start_chrome_9222.sh  status_chrome_9222.sh  stop_chrome_9222.sh
Ops-Cli/sessionhub/capture/: __init__.py  capture_requests.py  filter_rules.yaml
Ops-Cli/sessionhub/scene/: __init__.py  api.py  chrome_cdp.py  session_check.py  session_store.py  site_config.py  token_capture.py
Ops-Cli/tests/: test_capability_execution.py  test_cli.py  test_config.py  test_daily_profit_message.py  test_jst_order_invoice.py  test_jst_order_label.py  test_jst_order_logistics.py  test_jst_order_reimburse.py  test_jst_pickup_watch.py  test_jst_product.py  test_jst_profit.py  test_jst_scene_recovery.py  test_jst_stats.py  test_monthly_profit_feishu.py  test_platform_registration.py  test_sessionhub_adapter.py  test_tmcs_bill.py  test_tmcs_fulfillment_overview.py  test_tmcs_inventory.py  test_tmcs_product.py  test_tmcs_promotion_bill.py  test_tmcs_stock.py  test_tmcs_xp_workorder.py
(+213 files in other folders)
