[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ops-cli"
version = "0.1.0"
description = "Long-term maintainable ecommerce operations CLI skeleton."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "openpyxl>=3.1.5",
  "playwright>=1.52.0",
  "pydantic>=2.9.0",
  "PyYAML>=6.0.2",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "rich>=13.9.0",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
ops = "ops_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ops_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
